@@ -35,11 +35,10 @@
         <micronaut.version>4.9.0</micronaut.version>
         <micronaut.test.resources.enabled>true</micronaut.test.resources.enabled>
         <exec.mainClass>es.nachobrito.amica.agent.conversation.Application</exec.mainClass>
-        <json-schema-to-java-record.version>1.0</json-schema-to-java-record.version>
         <mn.jvmArgs>--add-modules=jdk.incubator.vector --enable-native-access=ALL-UNNAMED --enable-preview</mn.jvmArgs>
-        <langchain4j.version>1.0.1</langchain4j.version>
+        <langchain4j.version>1.3.0</langchain4j.version>
         <jlama.version>0.8.4</jlama.version>
-        <langchain4j-jlama.version>1.0.1-beta6</langchain4j-jlama.version>
+        <langchain4j-jlama.version>1.3.0-beta9</langchain4j-jlama.version>
     </properties>
 
     <repositories>
@@ -87,15 +86,8 @@
         </dependency>
         <dependency>
             <groupId>es.nachobrito.amica</groupId>
-            <artifactId>shared</artifactId>
+            <artifactId>amica-sdk-java</artifactId>
             <version>1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.cosium.json_schema_to_java_record</groupId>
-            <artifactId>json-schema-to-java-record-api</artifactId>
-            <version>${json-schema-to-java-record.version}</version>
-            <scope>provided</scope>
         </dependency>
 
 
@@ -180,11 +172,6 @@
                                 </exclusion>
                             </exclusions>
                         </path>
-                        <path>
-                            <groupId>com.cosium.json_schema_to_java_record</groupId>
-                            <artifactId>json-schema-to-java-record</artifactId>
-                            <version>${json-schema-to-java-record.version}</version>
-                        </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
                         <arg>-Amicronaut.processing.group=es.nachobrito.amica.agent.conversation</arg>
@@ -199,9 +186,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.3</version>
                 <configuration>
-                    <argLine>--add-modules=jdk.incubator.vector</argLine>
-                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>
+                        --add-modules=jdk.incubator.vector
+                        --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                        --enable-preview
+                        --enable-native-access=ALL-UNNAMED
+                        --add-exports java.base/jdk.internal.vm.vector=ALL-UNNAMED
+                    </argLine>
+
                 </configuration>
             </plugin>
         </plugins>
